--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/slider": "^4.4.3",
     "@react-navigation/native": "^6.0.2",
+    "@tamagui/babel-plugin": "^1.76.0",
+    "@tamagui/config": "^1.76.0",
     "@tanstack/react-query": "^5.8.4",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.18",
     "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
+    "expo-radio-button": "^1.0.8",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -37,7 +42,8 @@
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.6.2",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "tamagui": "^1.76.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
