--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/native": "^6.0.2",
     "@tamagui/babel-plugin": "^1.76.0",
     "@tamagui/config": "^1.76.0",
+    "@tamagui/linear-gradient": "^1.76.0",
     "@tanstack/react-query": "^5.8.4",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "expo": "~49.0.18",
     "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "^12.5.0",
     "expo-linking": "~5.0.2",
     "expo-radio-button": "^1.0.8",
     "expo-router": "^2.0.0",
