--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.6.2",
     "react-native-youtube-iframe": "^2.3.0",
