--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.6.2",
     "react-native-youtube-iframe": "^2.3.0",
-    "tamagui": "^1.76.0"
+    "tamagui": "^1.76.0",
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
