--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-webview": "^13.6.2",
     "react-native-youtube-iframe": "^2.3.0",
     "tamagui": "^1.76.0",
-    "expo-blur": "~12.4.1"
+    "expo-blur": "~12.4.1",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
