--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/babel-plugin": "^1.76.0",
     "@tamagui/config": "^1.76.0",
@@ -25,7 +25,7 @@
     "expo": "~49.0.18",
     "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
-    "expo-linear-gradient": "^12.5.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-radio-button": "^1.0.8",
     "expo-router": "^2.0.0",
@@ -46,7 +46,7 @@
     "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.1.7",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.2",
+    "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
     "tamagui": "^1.76.0",
     "expo-blur": "~12.4.1",
